# computational_genomics

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CptS571CoverSheet.doc  LICENSE  Makefile  README.md  cmake_install.cmake  debug.txt  fasta_read.cpp  fasta_read.h  gene_compare.cpp  gene_compare.h  gene_compare_main.cpp  read_mapping.cpp  read_mapping.h  read_mapping_main.cpp  suffix_tree.cpp  suffix_tree.h  suffix_tree_main.cpp
data/gene_compare/: parameters.config  sample.fasta  sample_output.txt  sample_parameters.config
data/hw3/: Peach_reference.fasta.stats  Peach_simulated_reads.fasta.stats
data/suffix_tree/: Human-BRCA2-cds_bwt.txt  Slyco_bwt.txt  chr12_bwt.txt  colorblind_human_gene.fasta  colorblind_human_gene_bwt.txt  colorblind_mouse_gene_bwt.txt  repeat.fas  s1_bwt.txt  s2_bwt.txt
